--- a/_posts/2017-06-30-links.markdown
+++ b/_posts/2017-06-30-links.markdown
@@ -2,6 +2,7 @@
 title: Helpful Links
 date: 2017-06-30 17:50:00 Z
 permalink: links
+layout: post
 ---
 
 Here's a list of helpful articles, essays and videos.
